test/valid/ParenthesesUnauthorisedUse/ParenthesesUnauthorisedUse.plume
/**
 * There is an unauthorised use of parentheses
 * Seems fine to me (vv)
 *
 * @author 37017, Joao Ramalho
 * @version $Id: ParenthesesUnauthorisedUse.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
class ParenthesesUnauthorisedUse extends Object is

  field radius : Integer
  
  method radius : () -> Integer is
    (radius + radius) * 2